--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+	<p>This is a Heading</p>
+	</div>	
+
+
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
