--- a/main.html
+++ b/main.html
@@ -8,9 +8,11 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container">
-	<p>This is a Heading</p>
-	</div>	
+	<main>
+	<div id="heading">
+	<h1>This is a Heading</h1>
+	</div>	 
+		</main>
 
 
 		
