--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main>
-	<div class="heading">
+	<div class="main">
 	<h1>This is a Heading</h1>
 	</div>	 
 		</main>
